--- a/index.html
+++ b/index.html
@@ -1,11 +1,242 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
-  </head>
-  <body>
-  <p>Hello World</p>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matt / Hogeboom - Front-End Web Developer</title>
+    <meta name="description"
+        content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
+    <meta name="robots" content="noindex,nofollow" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,700,300" rel="stylesheet" type="text/css">
+    <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:400,300,600,700,800" rel="stylesheet"
+        type="text/css">
+    <link href="css/global.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+</head>
+
+<body>
+    <div id="wrapper" class="home">
+        <a href="#home" class="top"><i class="fa fa-arrow-circle-up " aria-hidden="true"></i></a>
+        <div id="mobileNav">
+            <a href="#home"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
+            <a href="#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
+            <a href="#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
+            <a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
+        </div>
+
+        <section id="home">
+            <header>
+                <div class="inner">
+                    <a href="/" class="logo">
+                        <span class="brand"><em>M</em> <em>H</em></span>
+
+                        <span class="name">
+                            <h1>MATT/HOGEBOOM</h1>
+                            <h2>Front-End Web Developer</h2>
+                        </span>
+                    </a>
+
+                    <nav>
+                        <a href="#home">HOME</a> <em>&#47;</em>
+                        <a href="#about">ABOUT</a> <em>&#47;</em>
+                        <a href="#portfolio">WORK</a> <em>&#47;</em>
+                        <a href="#contact">CONTACT</a>
+                    </nav>
+                    <!--<a class="menu" href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+			-->
+                </div>
+            </header>
+            <h3>UX/UI Designer / Front End Developer</h3>
+            <ul>
+                <li>HTML5</li> <em>&#47;</em>
+                <li>CSS3</li> <em>&#47;</em>
+                <li>jQuery</li> <em>&#47;</em>
+                <li>Wordpress</li> <em>&#47;</em>
+                <li>UX Design</li>
+            </ul>
+            <a id="portfolio-button" class="button" href="#about" title="View portfolio items">Read More <i
+                    class="fa fa-angle-down"></i></a>
+        </section>
+
+
+        <section id="about">
+            <div class="intro">
+                <h3>Skills &#38; Qualifications</h3>
+            </div>
+            <article>
+                <div class="info">
+                    <h5>Design</h5>
+                    <strong>I design and build mobile websites and apps. </strong>
+                    <p>As a UI/UX designer, I have created user interfaces for desktop computers, mobile platforms,
+                        tablets and television. Using innovative design practices my mobile apps and web apps remain in
+                        step with the latest design trends. I create applications that are intuitive and user friendly.
+                        I have spent my career analyzing the needs and motivations of users, and pushing the
+                        capabilities of available technology to enhance the user experience.</p>
+                </div>
+                <div class="info">
+                    <h5>Code</h5>
+                    <strong>I write clean, organized code</strong>
+                    <p>I write code that conforms to the W3C's web standards and semantic best practices. I use
+                        technologies like HTML5, CSS3 (SCSS) and jQuery, to transform artwork into mobile first
+                        interactive and fully functional and responsive interfaces. My coding process involves the
+                        cleanest rendering of HTML5 and CSS to make the design process as efficent as possible. I also
+                        leverage WordPress to develop content managed websites.</p>
+                </div>
+            </article>
+        </section>
+
+        <section id="tech">
+
+            <article>
+                <div class="item"><img src="images/logo-html.png" width="" height="" alt="" /></div>
+                <div class="item"><img src="images/logo-css.png" width="" height="" alt="" /></div>
+                <div class="item"><img src="images/logo-wp.png" width="" height="" alt="" /></div>
+                <div class="item jq"><img src="images/logo-jquery.png" width="" height="" alt="" /></div>
+                <div class="item"><img src="images/logo-sass.png" width="" height="" alt="" /></div>
+                <div class="item"><img src="images/logo-node.png" width="" height="" alt="" /></div>
+                <!--<div class="item"><img src="images/logo-react.png" width="" height="" alt=""/></div>-->
+                <div class="item"><img src="images/logo-ps.png" width="" height="" alt="" /></div>
+                <div class="item"><img src="images/logo-ai.png" width="" height="" alt="" /></div>
+                <!--<div class="item"><img src="images/logo-apple.png" width="" height="" alt=""/></div>-->
+
+            </article>
+        </section>
+
+        <section id="portfolio">
+            <div class="intro">
+                <h3>Portfolio</h3>
+                <h4>View my selected projects</h4>
+            </div>
+
+            <article>
+                <div>
+                    <a href="http://www.newsday.com" target="_blank">
+                        <div class="overlay">
+                            <p>View Website</p>
+                        </div>
+                        <img src="images/work-newsday.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>Newsday Website</strong>
+                        <em>Design | HTML5 | CSS3 | jQuery</em>
+                    </span>
+
+                </div>
+
+                <div>
+                    <a href="https://itunes.apple.com/us/app/newsday-sports/id1110297965?mt=8" target="_blank">
+                        <div class="overlay">
+                            <p>View App</p>
+                        </div>
+                        <img src="images/work-sports-app.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>Newsday Sports App</strong>
+                        <em>Design | HTML5</em>
+                    </span>
+                </div>
+
+                <div>
+                    <a href="https://itunes.apple.com/us/app/newsday-tv/id1178076868?mt=8" target="_blank">
+                        <div class="overlay">
+                            <p>View App</p>
+                        </div>
+                        <img src="images/work-ndtv.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>Newsday Apple TV App</strong>
+                        <em>Design | HTML5</em>
+                    </span>
+                </div>
+
+                <div>
+                    <a href="http://www.amny.com" target="_blank">
+                        <div class="overlay">
+                            <p>View Website</p>
+                        </div>
+                        <img src="images/work-amny2.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>AMNY Website</strong>
+                        <em>HTML5 | CSS3 | jQuery</em>
+                    </span>
+                </div>
+
+                <div>
+                    <a href="https://www.lhmlawfirm.com" target="_blank">
+                        <div class="overlay">
+                            <p>View Website</p>
+                        </div>
+                        <img src="images/work-lhm.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>LHM Law Firm</strong>
+                        <em>Design | HTML5 | CSS3 | WordPress</em>
+                    </span>
+                </div>
+
+                <div>
+                    <a href="http://www.advantageptbrick.com" target="_blank">
+                        <div class="overlay">
+                            <p>View Website</p>
+                        </div>
+                        <img src="images/work-apt.png" width="474" height="288" alt="" />
+                    </a>
+                    <span>
+                        <strong>Advantage Physical Therapy Website</strong>
+                        <em>HTML5 | CSS3 | jQuery | WordPress</em>
+                    </span>
+                </div>
+            </article>
+
+        </section>
+
+        <footer id="contact">
+            <section>
+                <h3>Contact Information</h3>
+                <div class="logoBrand">
+                    <span>
+                        <a href="/" class="logo">
+                            <span class="brand"><em>M</em> <em>H</em></span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="inner">
+                    <div class="bioInfo">
+                        <span>
+                            <strong>MATT HOGEBOOM</strong>
+                            <p>Front-end Web Developer, UI/UX Designer</p>
+                            <p>Laguna Niguel, CA</p>
+                        </span>
+                    </div>
+
+                    <div class="links">
+                        <strong>QUICK LINKS</strong>
+                        <a href="#home">HOME</a>
+                        <a href="#about">ABOUT ME</a>
+                        <a href="#portfolio">WORK</a>
+                        <a href="#contact">CONTACT</a>
+                    </div>
+
+                    <div class="social">
+                        <strong>CONTACT ME</strong>
+                        <a href="mailto:matthewhogeboom@gmail.com"><i class="fa fa-envelope"></i>
+                            matthewhogeboom@gmail.com</a>
+                        <a href="tel:9495429693"><i class="fa fa-phone-square"></i> (949)-542-9693 </a>
+                        <a href="http://www.linkedin.com/in/matthogeboom"><i class="fa fa-linkedin-square"></i> Connect
+                            on Linkdin</a>
+                    </div>
+                </div>
+
+                <a href="matt-hogeboom-resume-2019.pdf" class="button">Download PDF resume</a>
+            </section>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+            <script src="scripts/scripts.js"></script>
+            <!--<script src="js/modal.js"></script>-->
+        </footer>
+    </div>
+</body>
+
 </html>
