Image and css additions

--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@
                         </span>
                     </div>
 
-                    <div class="links">
+                    <nav>
                         <strong>QUICK LINKS</strong>
                         <a href="#home">HOME</a>
                         <a href="#about">ABOUT ME</a>
                         <a href="#portfolio">WORK</a>
                         <a href="#contact">CONTACT</a>
-                    </div>
+                    </nav>
 
                     <div class="social">
                         <strong>CONTACT ME</strong>
@@ -226,7 +226,7 @@
                             matthewhogeboom@gmail.com</a>
                         <a href="tel:9495429693"><i class="fa fa-phone-square"></i> (949)-542-9693 </a>
                         <a href="http://www.linkedin.com/in/matthogeboom"><i class="fa fa-linkedin-square"></i> Connect
-                            on Linkdin</a>
+                            on LinkdIn</a>
                     </div>
                 </div>
 
@@ -234,7 +234,6 @@
             </section>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
             <script src="scripts/scripts.js"></script>
-            <!--<script src="js/modal.js"></script>-->
         </footer>
     </div>
 </body>
