Copy and layout updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,17 +42,16 @@
                         <a href="#portfolio">WORK</a> <em>&#47;</em>
                         <a href="#contact">CONTACT</a>
                     </nav>
-                    <!--<a class="menu" href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
-			-->
+
                 </div>
             </header>
-            <h3>UX/UI Designer / Front End Developer</h3>
+            <h3>UI Designer / Website Developer</h3>
             <ul>
                 <li>HTML5</li> <em>&#47;</em>
                 <li>CSS3</li> <em>&#47;</em>
                 <li>jQuery</li> <em>&#47;</em>
-                <li>Wordpress</li> <em>&#47;</em>
-                <li>UX Design</li>
+                <li>WordPress</li> <em>&#47;</em>
+                <li>UI Design</li>
             </ul>
             <a id="portfolio-button" class="button" href="#about" title="View portfolio items">Read More <i
                     class="fa fa-angle-down"></i></a>
