--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="I design and build websites and applications for viewing on a television, desktop, tablet or mobile device">
     <meta name="robots" content="noindex,nofollow" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,700,300" rel="stylesheet" type="text/css">
-    <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:400,300,600,700,800" rel="stylesheet"
+    <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:100,400,300,600,700,800" rel="stylesheet"
         type="text/css">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -31,8 +31,8 @@
                         <span class="brand"><em>M</em> <em>H</em></span>
 
                         <span class="name">
-                            <h1>MATT/HOGEBOOM</h1>
-                            <h2>Front-End Web Developer</h2>
+                            <h1>MATT<em>/</em>HOGEBOOM</h1>
+                            <p>UI Designer / Website Developer</p>
                         </span>
                     </a>
 
@@ -45,7 +45,7 @@
 
                 </div>
             </header>
-            <h3>UI Designer / Website Developer</h3>
+            <h3>I Design and Develop Websites and Interactive Applications </h3>
             <ul>
                 <li>HTML5</li> <em>&#47;</em>
                 <li>CSS3</li> <em>&#47;</em>
@@ -84,7 +84,7 @@
             </article>
         </section>
 
-        <section id="tech">
+        <!--section id="tech">
 
             <article>
                 <div class="item"><img src="images/logo-html.png" width="" height="" alt="" /></div>
@@ -93,13 +93,13 @@
                 <div class="item jq"><img src="images/logo-jquery.png" width="" height="" alt="" /></div>
                 <div class="item"><img src="images/logo-sass.png" width="" height="" alt="" /></div>
                 <div class="item"><img src="images/logo-node.png" width="" height="" alt="" /></div>
-                <!--<div class="item"><img src="images/logo-react.png" width="" height="" alt=""/></div>-->
+                <!--<div class="item"><img src="images/logo-react.png" width="" height="" alt=""/></div>
                 <div class="item"><img src="images/logo-ps.png" width="" height="" alt="" /></div>
                 <div class="item"><img src="images/logo-ai.png" width="" height="" alt="" /></div>
-                <!--<div class="item"><img src="images/logo-apple.png" width="" height="" alt=""/></div>-->
+                <!--<div class="item"><img src="images/logo-apple.png" width="" height="" alt=""/></div>
 
             </article>
-        </section>
+        </section -->
 
         <section id="portfolio">
             <div class="intro">
@@ -123,15 +123,13 @@
                 </div>
 
                 <div>
-                    <a href="https://itunes.apple.com/us/app/newsday-sports/id1110297965?mt=8" target="_blank">
                         <div class="overlay">
                             <p>View App</p>
                         </div>
-                        <img src="images/work-sports-app.png" width="474" height="288" alt="" />
-                    </a>
+                        <img src="images/work-ndapp.png" width="474" height="288" alt="" />
                     <span>
-                        <strong>Newsday Sports App</strong>
-                        <em>Design | HTML5</em>
+                        <strong>Newsdy Mobile App</strong>
+                        <em>UI Design / HTML5</em>
                     </span>
                 </div>
 
@@ -153,7 +151,7 @@
                         <div class="overlay">
                             <p>View Website</p>
                         </div>
-                        <img src="images/work-amny2.png" width="474" height="288" alt="" />
+                        <img src="images/work-amny.png" width="474" height="288" alt="" />
                     </a>
                     <span>
                         <strong>AMNY Website</strong>
