--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:100,400,300,600,700,800" rel="stylesheet"
         type="text/css">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- link rel="stylesheet" href="css/font-awesome.min.css" -->
 </head>
 
 <body>
@@ -64,6 +64,7 @@
             </div>
             <article>
                 <div class="info">
+                        <i class="fas fa-palette"></i>
                     <h5>Design</h5>
                     <strong>I design and build mobile websites and apps. </strong>
                     <p>As a UI/UX designer, I have created user interfaces for desktop computers, mobile platforms,
@@ -73,6 +74,7 @@
                         capabilities of available technology to enhance the user experience.</p>
                 </div>
                 <div class="info">
+                <i class="fas fa-file-code"></i>    
                     <h5>Code</h5>
                     <strong>I write clean, organized code</strong>
                     <p>I write code that conforms to the W3C's web standards and semantic best practices. I use
@@ -123,10 +125,12 @@
                 </div>
 
                 <div>
+                        <a href="https://apps.apple.com/us/app/newsday/id358571317" target="_blank">
                         <div class="overlay">
                             <p>View App</p>
                         </div>
                         <img src="images/work-ndapp.png" width="474" height="288" alt="" />
+                        </a>
                     <span>
                         <strong>Newsdy Mobile App</strong>
                         <em>UI Design / HTML5</em>
@@ -221,7 +225,7 @@
                         <a href="mailto:matthewhogeboom@gmail.com"><i class="fa fa-envelope"></i>
                             matthewhogeboom@gmail.com</a>
                         <a href="tel:9495429693"><i class="fa fa-phone-square"></i> (949)-542-9693 </a>
-                        <a href="http://www.linkedin.com/in/matthogeboom"><i class="fa fa-linkedin-square"></i> Connect
+                        <a href="http://www.linkedin.com/in/matthogeboom"><i class="fab fa-linkedin"></i> Connect
                             on LinkdIn</a>
                     </div>
                 </div>
@@ -230,6 +234,7 @@
             </section>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
             <script src="scripts/scripts.js"></script>
+            <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
         </footer>
     </div>
 </body>
