--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:100,400,300,600,700,800" rel="stylesheet"
         type="text/css">
     <link href="css/global.css" rel="stylesheet" type="text/css" />
-    <!-- link rel="stylesheet" href="css/font-awesome.min.css" -->
 </head>
 
 <body>
@@ -37,15 +36,15 @@
                     </a>
 
                     <nav>
-                        <a href="#home">HOME</a> <em>&#47;</em>
-                        <a href="#about">ABOUT</a> <em>&#47;</em>
-                        <a href="#portfolio">WORK</a> <em>&#47;</em>
-                        <a href="#contact">CONTACT</a>
+                        <a href="#home"><i class="fas fa-home"></i> HOME</a> 
+                        <a href="#about"><i class="fas fa-palette"></i> Skills</a> 
+                        <a href="#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+                        <a href="#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
                     </nav>
 
                 </div>
             </header>
-            <h3>I Design and Develop Websites and Interactive Applications </h3>
+            <h2>I Design and Develop Websites and Interactive Applications </h2>
             <ul>
                 <li>HTML5</li> <em>&#47;</em>
                 <li>CSS3</li> <em>&#47;</em>
@@ -59,19 +58,19 @@
 
 
         <section id="about">
-            <div class="intro">
-                <h3>Skills &#38; Qualifications</h3>
-            </div>
+                <h3>My Skills &#38; Qualifications</h3>
+                <h4>How I get things done...</h4>
+
             <article>
                 <div class="info">
                         <i class="fas fa-palette"></i>
                     <h5>Design</h5>
                     <strong>I design and build mobile websites and apps. </strong>
                     <p>As a UI/UX designer, I have created user interfaces for desktop computers, mobile platforms,
-                        tablets and television. Using innovative design practices my mobile apps and web apps remain in
-                        step with the latest design trends. I create applications that are intuitive and user friendly.
-                        I have spent my career analyzing the needs and motivations of users, and pushing the
-                        capabilities of available technology to enhance the user experience.</p>
+                        tablets and television. Using the Adobe Design Suite, I create innovative design practices my 
+                        mobile apps and web apps remain in step with the latest design trends. I create applications 
+                        that are intuitive and user friendly. I have spent my career analyzing the needs and motivations 
+                        of users, and pushing the capabilities of available technology to enhance the user experience.</p>
                 </div>
                 <div class="info">
                 <i class="fas fa-file-code"></i>    
@@ -83,6 +82,8 @@
                         cleanest rendering of HTML5 and CSS to make the design process as efficent as possible. I also
                         leverage WordPress to develop content managed websites.</p>
                 </div>
+ 
+                
             </article>
         </section>
 
