--- a/portfolio/nd-web/index.html
+++ b/portfolio/nd-web/index.html
@@ -155,7 +155,7 @@
                 <a href="matt-hogeboom-resume-2019.pdf" class="button">Download PDF resume</a>
             </section>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-            <script src="scripts/scripts.js"></script>
+            <script src="/scripts/scripts.js"></script>
             <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
            
         </footer>
