Image path updates

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <li>WordPress</li> <em>&#47;</em>
                 <li>UI Design</li>
             </ul>
-            <a id="portfolio-button" class="button" href="#about" title="View portfolio items">Read More <i
-                    class="fa fa-angle-down"></i></a>
+            <a id="portfolio-button" class="button" href="#about" title="View portfolio items">Read More 
+                    <i class="fas fa-chevron-down"></i></a>
         </section>
 
 
@@ -73,11 +73,11 @@
                         that are intuitive and user friendly. I have spent my career analyzing the needs and motivations 
                         of users, and pushing the capabilities of available technology to enhance the user experience.</p>
                     </div>
-                        <figure><img src="../images/img-art.jpg"></figure> 
+                        <figure><img src="images/img-art.jpg"></figure> 
                     </aside>
                     
                 <aside class="info">
-                        <figure><img src="../images/img-code.jpg"></figure> 
+                        <figure><img src="images/img-code.jpg"></figure> 
                     <div>
                 <i class="fas fa-file-code"></i>    
                     <h5>Code</h5>
