--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <article>
 
                         <div>
-                            <a href="portfolio/nd-web/">
+                            <a href="work/nd-web/">
                                 <div class="overlay">
                                         <p>View Project Info</p>
                                     </div>
@@ -118,7 +118,7 @@
                         </div>
         
                         <div>
-                                <a href="portfolio/nd-app/">
+                                <a href="work/nd-app/">
                                 <div class="overlay">
                                         <p>View Project Info</p>
                                     </div>
@@ -130,7 +130,7 @@
                         </a>
                         </div>
                         <div>
-                                <a href="/portfolio/amny-web/">
+                                <a href="work/amny-web/">
                                     <div class="overlay">
                                             <p>View Project Info</p>
                                         </div>
@@ -143,7 +143,7 @@
                             </div>
 
                         <div>
-                            <a href="portfolio/lhm-web/">
+                            <a href="work/lhm-web/">
                                 <div class="overlay">
                                         <p>View Project Info</p>
                                     </div>
@@ -156,7 +156,7 @@
                         </a>
                         </div>   
                         <div>
-                            <a href="/portfolio/apt-web/">
+                            <a href="work/apt-web/">
                                 <div class="overlay">
                                     <p>View Project Info</p>
                                 </div>
