--- a/amny-app.html
+++ b/amny-app.html
@@ -52,7 +52,7 @@
                                  related to NYC. Informatiom about Enertainment, Restaurants, Sports scores to weather updates
                                  from your mobile device.
                         </p>     
-                        <a id="portfolio-button" class="button" href="#intro" title="View portfolio items">Read More 
+                        <a id="portfolio-button" class="button" href="#info" title="View portfolio items">Read More 
                                 <i class="fas fa-chevron-down"></i></a>    
                 </aside>
                 <figure>
