--- a/amny-web.html
+++ b/amny-web.html
@@ -63,8 +63,8 @@
                 </span> 
                 </div>
     <section id="info">
-    <h2>Design Process </h2>
-    <p>Created wireframes and layout designs for home and interior pages. Built responsive layout in HTML/CSS. 
+            <h2>Project Overview </h2>
+            <p>Created wireframes and layout designs for home and interior pages. Built responsive layout in HTML/CSS. 
        Web application is AJAX-enabled allowing for a more streamlined UX. Framework is JAVA based in Velocity. 
     </p> 
 
