--- a/apt-web.html
+++ b/apt-web.html
@@ -48,7 +48,7 @@
                 
                         <p>Responsive WordPress website built with a customized theme. 
                         </p>     
-                        <a href="#secondary" id="portfolio-button" class="button"  title="View portfolio items">Read More <i
+                        <a href="#info" id="portfolio-button" class="button"  title="View portfolio items">Read More <i
                             class="fa fa-angle-down"></i></a>
                 </aside>
                 <figure>
@@ -61,7 +61,7 @@
                 </span> 
                 </div>
             <section id="info">
-                    <h2>Design Process </h2>
+                    <h2>Project Overview </h2>
                     <p>Advantage Physical Therapy located in NJ, had a website that was outdated in term of appearance and technology. They needed a responsive website with a 
                     modern theme that they could administrate documents and patient forms. Using a custom template, I leveraged a WordPress that fit
                     their needs in terms of look and content delivery. 
