--- a/lhm-web.html
+++ b/lhm-web.html
@@ -46,7 +46,7 @@
                 
                         <p>Responsive website built in WordPress. 
                         </p>     
-                        <a id="portfolio-button" class="button" href="#secondary" title="View portfolio items">Read More <i
+                        <a id="portfolio-button" class="button" href="#info" title="View portfolio items">Read More <i
                             class="fa fa-angle-down"></i></a>    
                 </aside>
                 <figure>
@@ -59,7 +59,7 @@
                 </span> 
                 </div>
             <section id="info">
-                    <h2>Design Process </h2>
+                    <h2>Project Overview </h2>
                     <p>LHM Law Firm was in desperate need of an update for their website. Which was critically out of date in terms of 
                         design and functionality. They also wanted a responsive website they could administrate themselves, making
                     WordPress the most compatible solution. They were looking for a clean, unluttered look to both their desktop
