--- a/nd-app.html
+++ b/nd-app.html
@@ -48,7 +48,7 @@
                             a native app download. Design elements included page fronts, story galleries, story pages. Media
                             content such as photo/video galleries. All of the challenges of delivering the news in a mobile format.
                         </p>     
-                        <a id="portfolio-button2" class="button" href="#intro" title="View portfolio items">Read More <i
+                        <a id="portfolio-button2" class="button" href="#info" title="View portfolio items">Read More <i
                             class="fas fa-chevron-down"></i></a>    
                 </aside>
                 <figure>
@@ -63,8 +63,8 @@
                 </span> 
                 </div>
     <section id="info">
-    <h2>Newsday Mobile App</h2>
-    <p>Many interfaces needed to be designed for the mobile app, so we could include as much functionality as possible 
+            <h2>Project Overview </h2>
+            <p>Many interfaces needed to be designed for the mobile app, so we could include as much functionality as possible 
         from the website. Templates included Landing pages, story lists, articles and weather pages. We also needed
     to streamline the subscription process for ease of use on mobile devices. The firsty step was to create wireframes for each section using 
 Adobe Illustrator. As each detail was finalized. The final designs were then created with pixel-perfect detail with Adobe Photoshop.</p>
