--- a/nd-web.html
+++ b/nd-web.html
@@ -47,7 +47,7 @@
                         <p>The latest redesign of Newsday LLC launched in January 2018. In this version we made drastic changes and 
                             improvements to the UX, improving usability and utilizing modern frameworks to deliver a robust experience unique to the news industry.
                         </p>     
-                        <a id="portfolio-button" class="button" href="#intro" title="View portfolio items">Read More 
+                        <a id="portfolio-button" class="button" href="#info" title="View portfolio items">Read More 
                                 <i class="fas fa-chevron-down"></i></a>    
                 </aside>
                 <figure>
@@ -61,8 +61,8 @@
                 </div>
     <section id="info">
     <article class="details">
-    <h2>Project Details </h2>
-    <p>As the senior designer on this project, I was an intergal part of it's conception.  
+            <h2>Project Overview </h2>
+            <p>As the senior designer on this project, I was an intergal part of it's conception.  
             I provided mockups from wireframes to full-size comps. I used HTML, SASS and JQuery to build mobile-first, responsive 
             front-end templates that were integrated into a VSCode framework.</p> 
 
