--- a/amny-web.html
+++ b/amny-web.html
@@ -10,16 +10,16 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900,700,300" rel="stylesheet" type="text/css">
     <link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans:100,400,300,600,700,800" rel="stylesheet"
         type="text/css">
-    <link href="/css/global.css" rel="stylesheet" type="text/css" />
+    <link href="css/global.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="wrapper" class="page">
         <a href="#home" class="top"><i class="fa fa-arrow-circle-up " aria-hidden="true"></i></a>
         <div id="mobileNav">
-            <a href="index.html#home"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
-            <a href="#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
-            <a href="#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
-            <a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
+            <a href="/"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
+            <a href="index.html#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
+            <a href="index.html#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
+            <a href="index.html#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
         </div>
         <section id="intro">
             <header >
@@ -154,9 +154,9 @@
                 <a href="matt-hogeboom-resume-2019.pdf" class="button">Download PDF resume</a>
             </section>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-            <script src="/scripts/scripts.js"></script>
             <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
-           
+            <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+            <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
         </footer>
     </div>
 </body>
