--- a/nd-web.html
+++ b/nd-web.html
@@ -16,10 +16,10 @@
     <div id="wrapper" class="page">
         <a href="#home" class="top"><i class="fa fa-arrow-circle-up " aria-hidden="true"></i></a>
         <div id="mobileNav">
-            <a href="index.html#home"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
-            <a href="#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
-            <a href="#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
-            <a href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
+                <a href="/"><i class="fa fa-home" aria-hidden="true"></i>HOME</a>
+                <a href="index.html#about"><i class="fa fa-info-circle" aria-hidden="true"></i> ABOUT</a>
+                <a href="index.html#portfolio"><i class="fa fa-cogs" aria-hidden="true"></i> WORK</a>
+                <a href="index.html#contact"><i class="fa fa-envelope" aria-hidden="true"></i>CONTACT</a>
         </div>
         <section id="intro">
             <header >
@@ -32,10 +32,10 @@
                         </span>
                     </a>
                     <nav>
-                        <a href="/index.html"><i class="fas fa-home"></i> HOME</a> 
-                        <a href="/index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
-                        <a href="/index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
-                        <a href="/index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
+                        <a href="index.html"><i class="fas fa-home"></i> HOME</a> 
+                        <a href="index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
+                        <a href="index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+                        <a href="index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
                     </nav>
                 </div>
             </header>
@@ -51,7 +51,7 @@
                                 <i class="fas fa-chevron-down"></i></a>    
                 </aside>
                 <figure>
-                <img src="/images/projects/ndweb-devices.png">
+                <img src="images/projects/ndweb-devices.png">
                 </figure>             
                     </article>
                     </section>
@@ -86,7 +86,7 @@
                  <p>The website is continuously updated with a vast amount of changes since its initial launch. Our working process involves use of Jira for code management.</p>
                 </article>
             <figure>
-                    <img src="/images/projects/ndweb-devices.png">
+                    <img src="images/projects/ndweb-devices.png">
                     </figure>  
         
     </section>           
@@ -100,10 +100,10 @@
                     front-end.</p> 
 <article class="screens">
     <figure>
-        <img src="/images/projects/ndweb-wthr.png">
+        <img src="images/projects/ndweb-wthr.png">
         </figure>  
 <figure>
-    <img src="/images/projects/ndweb-ttd.png">
+    <img src="images/projects/ndweb-ttd.png">
 
     </figure> 
 </article>
@@ -152,9 +152,9 @@
                 <a href="matt-hogeboom-resume-2019.pdf" class="button">Download PDF resume</a>
             </section>
             <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-            <script src="/scripts/scripts.js"></script>
             <script src="https://kit.fontawesome.com/859c3b0e27.js" crossorigin="anonymous"></script>
-           
+            <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
+            <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
         </footer>
     </div>
 </body>
