Live test updates: 1

--- a/amny-app.html
+++ b/amny-app.html
@@ -45,7 +45,6 @@
                     <article>
                         <aside>
                         <h1>AMNY Website</h1>
-                        <p class="author">Newsday <span class="date">September 2017</span></p>
                 
                         <p>AM New York is a morning free daily newspaper that is part of Newsday Media Group. 
                                 amNewYork brings you all the fast-changing news, sports, and lifestyle information 
@@ -109,20 +108,20 @@
                 </div>
 
                 <div class="inner">
-                    <div class="bioInfo">
-                        <span>
-                            <strong>MATT HOGEBOOM</strong>
-                            <p>Front-end Web Developer, UI/UX Designer</p>
-                            <p>Laguna Niguel, CA</p>
-                        </span>
-                    </div>
+                        <div class="bioInfo">
+                                <span>
+                                    <strong>MATT HOGEBOOM</strong>
+                                    <p>Front-end Web Developer/UX Designer. Currently living in 
+                                    Laguna Niguel, CA</p>
+                                </span>
+                            </div>
 
                     <nav>
                         <strong>QUICK LINKS</strong>
-                        <a href="#home">HOME</a>
-                        <a href="#about">ABOUT ME</a>
-                        <a href="#portfolio">WORK</a>
-                        <a href="#contact">CONTACT</a>
+                        <a href="/">HOME</a>
+                        <a href="index.html#about">ABOUT ME</a>
+                        <a href="index.html#portfolio">WORK</a>
+                        <a href="index.html#contact">CONTACT</a>
                     </nav>
 
                     <div class="social">
