--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         </div>
                                     <img src="images/work-amny.png" width="474" height="288" alt="" />                    
                                 <span>
-                                    <strong>AMNY Mobile App</strong>
+                                    <strong>AMNY Website</strong>
                                     <em>HTML5 | CSS3 | jQuery</em>
                                 </span>
                             </a>
@@ -201,8 +201,8 @@
                     <div class="bioInfo">
                         <span>
                             <strong>MATT HOGEBOOM</strong>
-                            <p>Front-end Web Developer, UI/UX Designer</p>
-                            <p>Laguna Niguel, CA</p>
+                            <p>Front-end Web Developer/UX Designer. Currently living in 
+                            Laguna Niguel, CA</p>
                         </span>
                     </div>
 
