--- a/apt-web.html
+++ b/apt-web.html
@@ -33,10 +33,10 @@
                                 </span>
                             </a>     
                             <nav>
-                                    <a href="/index.html"><i class="fas fa-home"></i> HOME</a> 
-                                    <a href="/index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
-                                    <a href="/index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
-                                    <a href="/index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
+                                    <a href="index.html"><i class="fas fa-home"></i> HOME</a> 
+                                    <a href="index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
+                                    <a href="index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
+                                    <a href="index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
                             </nav>
         
                         </div>
@@ -44,9 +44,8 @@
                     <article>
                         <aside>
                         <h1>Advantage Physical Therapy</h1>
-                        <p class="author">Newsday <span class="date">September 2017</span></p>
                 
-                        <p>Responsive WordPress website built with a customized theme. 
+                        <p>Responsive WordPress website built with a customized theme. Content managed galleries and patient form downloads.
                         </p>     
                         <a href="#info" id="portfolio-button" class="button"  title="View portfolio items">Read More <i
                             class="fa fa-angle-down"></i></a>
@@ -94,20 +93,20 @@
                 </div>
 
                 <div class="inner">
-                    <div class="bioInfo">
-                        <span>
-                            <strong>MATT HOGEBOOM</strong>
-                            <p>Front-end Web Developer, UI/UX Designer</p>
-                            <p>Laguna Niguel, CA</p>
-                        </span>
-                    </div>
+                        <div class="bioInfo">
+                                <span>
+                                    <strong>MATT HOGEBOOM</strong>
+                                    <p>Front-end Web Developer/UX Designer. Currently living in 
+                                    Laguna Niguel, CA</p>
+                                </span>
+                            </div>
 
                     <nav>
                         <strong>QUICK LINKS</strong>
-                        <a href="#home">HOME</a>
-                        <a href="#about">ABOUT ME</a>
-                        <a href="#portfolio">WORK</a>
-                        <a href="#contact">CONTACT</a>
+                        <a href="/">HOME</a>
+                        <a href="index.html#about">ABOUT ME</a>
+                        <a href="index.html#portfolio">WORK</a>
+                        <a href="index.html#contact">CONTACT</a>
                     </nav>
 
                     <div class="social">
