--- a/nd-app.html
+++ b/nd-app.html
@@ -32,7 +32,7 @@
                         </span>
                     </a>
                     <nav>
-                        <a href="index.html"><i class="fas fa-home"></i> HOME</a> 
+                        <a href="/"><i class="fas fa-home"></i> HOME</a> 
                         <a href="index.html#about"><i class="fas fa-palette"></i> SKILLS</a> 
                         <a href="index.html#portfolio"><i class="fas fa-code"></i> MY WORK</a> 
                         <a href="index.html#contact"><i class="fas fa-mobile-alt"></i> CONTACT</a>
@@ -41,9 +41,7 @@
             </header>
                     <article class="app">
                         <aside>
-                        <h1>Newsday Mobile App</h1>
-                        <p class="author">Newsday <span class="date">September 2017</span></p>
-                
+                        <h1>Newsday Mobile App</h1>                
                         <p>The first mobile app from Newsday brought all the elements of the website to 
                             a native app download. Design elements included page fronts, story galleries, story pages. Media
                             content such as photo/video galleries. All of the challenges of delivering the news in a mobile format.
@@ -164,19 +162,19 @@ Adobe Illustrator. As each detail was finalized. The final designs were then cre
                     </span>
                 </div>
                 <div class="inner">
-                    <div class="bioInfo">
-                        <span>
-                            <strong>MATT HOGEBOOM</strong>
-                            <p>Front-end Web Developer, UI/UX Designer</p>
-                            <p>Laguna Niguel, CA</p>
-                        </span>
-                    </div>
+                        <div class="bioInfo">
+                                <span>
+                                    <strong>MATT HOGEBOOM</strong>
+                                    <p>Front-end Web Developer/UX Designer. Currently living in 
+                                    Laguna Niguel, CA</p>
+                                </span>
+                            </div>
                     <nav>
                         <strong>QUICK LINKS</strong>
-                        <a href="#home">HOME</a>
-                        <a href="#about">ABOUT ME</a>
-                        <a href="#portfolio">WORK</a>
-                        <a href="#contact">CONTACT</a>
+                        <a href="/">HOME</a>
+                        <a href="index.html#about">ABOUT ME</a>
+                        <a href="index.html#portfolio">WORK</a>
+                        <a href="index.html#contact">CONTACT</a>
                     </nav>
                     <div class="social">
                         <strong>CONTACT ME</strong>
