project scroll arrows

--- a/amny-web.html
+++ b/amny-web.html
@@ -56,6 +56,8 @@
                 <img src="images/projects/amny-devices.png">
                 </figure>             
                     </article>
+                    <a class="rt" href="lhm-web.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
+                    <a class="lt" href="nd-app.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a> 
                     </section>
             <div class="store">
                     <span><p>Visit Website at: <a href="http://amny.com">AMNY.com</a></p>
