--- a/apt-web.html
+++ b/apt-web.html
@@ -54,6 +54,8 @@
                 <img src="images/projects/apt-devices.png">
                 </figure>             
                     </article>
+                    <a class="rt" href="#"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
+                    <a class="lt" href="lhm-web.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a> 
                     </section>
             <div class="store">
                     <span><p>Visit Website at: <a href="http://advantageptbrick.com/">advantageptbrick.com</a></p></span>
