--- a/lhm-web.html
+++ b/lhm-web.html
@@ -51,6 +51,8 @@
                 <img src="images/projects/lhm-devices.png">
                 </figure>             
                     </article>
+                    <a class="rt" href="apt-web.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
+                    <a class="lt" href="amny-web.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a> 
                     </section>
             <div class="store">
                     <span><p>Visit Website at: <a href="https://www.lhmlawfirm.com/">lhmlawfirm.com</a></p></span>
