--- a/nd-web.html
+++ b/nd-web.html
@@ -51,8 +51,10 @@
                 </aside>
                 <figure>
                 <img src="images/projects/ndweb-devices.png">
-                </figure>             
+                </figure>  
                     </article>
+                    <a class="rt" href="nd-app.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
+                    <a class="lt" href="nd-apt.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a>           
                     </section>
             <div class="store">
                   <span> <p>Visit Website at: <a href="http://newsday.com">Newsday.com</a></p></span> 
@@ -119,11 +121,8 @@
     <img src="images/projects/ndweb-ttd.png">
 
     </figure> 
-</article>
-  
-                  
+</article>             
             </section>           
-    
     <footer id="contact">
             <section>
                 <h3>Contact Information</h3>
