--- a/nd-app.html
+++ b/nd-app.html
@@ -53,6 +53,8 @@
                 <img src="images/projects/ndapp-top.png">
                 </figure>             
                     </article>
+                    <a class="rt" href="amny-web.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
+                    <a class="lt" href="nd-web.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a> 
                     </section>
             <div class="store">
                     <span><p>Available at:</p>
