page linking updates

--- a/lhm-web.html
+++ b/lhm-web.html
@@ -60,7 +60,7 @@
                 </div>
             <section id="info">
                     <h2>Project Overview </h2>
-                    <p>LHM Law Firm was in need of an update for their website. Which was critically out of date in terms of 
+                    <p>LHM Law Firm was in need of an update for their website, which was out of date in terms of 
                         design and functionality. They also wanted a responsive website they could administrate themselves and were interested in
                     WordPress as their solution. They were looking for a clean, unluttered look to both their desktop
                     and mobile sites. </p>
