--- a/nd-web.html
+++ b/nd-web.html
@@ -53,8 +53,8 @@
                 <img src="images/projects/ndweb-devices.png">
                 </figure>  
                     </article>
-                    <a class="rt" href="nd-app.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>           
-                    <a class="lt" href="nd-apt.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a>           
+                    <a class="lt" href="apt-web.html"><i class="fa fa-angle-left" aria-hidden="true"></i></a> 
+                    <a class="rt" href="nd-app.html"><i class="fa fa-angle-right" aria-hidden="true"></i></a>                     
                     </section>
             <div class="store">
                   <span> <p>Visit Website at: <a href="http://newsday.com">Newsday.com</a></p></span> 
