--- a/nd-app.html
+++ b/nd-app.html
@@ -66,7 +66,7 @@
             <article class="details">
             <h2>Project Overview </h2>
             <p>Dowens of different interfaces were needed to be developed and designed for the mobile app, so we could include as much functionality as possible 
-        from the website. Templates included Landing pages, story lists, articles and weather pages. We also needed
+        from the website. Templates included landing pages, story lists, articles and weather pages. We also needed
     to streamline the subscription process for ease of use on mobile devices. The firsty step was to create wireframes for each section using 
 Adobe Illustrator. As each detail was finalized. The final designs were then created with pixel-perfect detail with Adobe Photoshop.</p>
 <h3>Design Contributions</h3>
