--- a/nd-web.html
+++ b/nd-web.html
@@ -63,7 +63,7 @@
     <section id="info">
     <article class="details">
             <h2>Project Overview </h2>
-            <p>As the senior designer on this project, I was an intergal part of it's conception.  
+            <p>As the senior designer on this project, I was an intergal part of the Life Cycle process including Analysis, Design and Development.  
             I provided mockups from wireframes to full-size comps. I used HTML, PHP,SASS and JQuery to build mobile-first, responsive 
             front-end templates that were integrated into a VSCode framework.</p> 
 
@@ -92,7 +92,7 @@
                         
                         <ul>
                                 <li>QA testing</li>
-                                <li>Performane testing</li>
+                                <li>Performance testing</li>
                                 <li>App Settings</li>
                                 <li>Icons & Graphics</li>
                                 <li>Subsciptiom forms flow</li>
